[package]
name = "mald_manager"
version = "0.1.0"
authors = ["Sylvan B <sylvanbowdler18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde-pickle = "0.6"
kankyo = "0.3"
mongodb = "1.0"
thiserror = "1.0.20"
anyhow = "1.0"
pyo3 = "0.11"

[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]

[dependencies.serenity]
version = "0.8"
features = ["cache", "framework", "standard_framework", "voice"]

